# Claude-MCP-tools

./: .gitignore  ALL_NEW_SERVERS_AND_SKILLS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_AUTOMATION_PLAN.md  CLAUDE_CODE_TESTING_STATUS.md  CLAUDE_DESKTOP_CONFIG_UPDATE.md  CLAUDE_DESKTOP_SYSTEM_INSTRUCTIONS.md  CLEANUP_REPORT.md  CLEANUP_SUMMARY.md  CLEANUP_SUMMARY_UPDATED.md  CODE_INTELLIGENCE_MCP_IMPLEMENTATION_PLAN.md  CODE_INTELLIGENCE_SETUP_GUIDE.md  CODE_INTELLIGENCE_VALUE_ANALYSIS.md  COMPREHENSIVE_PROJECT_STATUS.md  COMPREHENSIVE_TESTING_PLAN.md  COMPUTER_USE_API_COMPLIANCE.md  COMPUTER_USE_API_IMPLEMENTATION_COMPLETE.md  CONFIG_FILES_UPDATED_SUMMARY.md  CONFIG_UPDATE_COMPLETE.md  CONSOLIDATION_COMPLETE.md  CONVERSATION_RESUMPTION_INSTRUCTIONS.md  CURRENT_CAPABILITIES_DEMO.md  DEPENDENCIES_INSTALLED_SUMMARY.md  DESKTOP_AUTOMATION_COMPARISON.md  DEVELOPMENT_SESSION_LOG.md  ENHANCED_SYSTEM_INSTRUCTIONS_ADDON.md  FINAL_REMOVAL_LIST.md  FINAL_REMOVAL_LIST_FINAL.md  FINAL_REMOVAL_LIST_REVISED.md  IMPLEMENTATION_GUIDE.md  LIVE_MCP_TESTING_REPORT.md  MCP_PLATFORM_EVALUATION_REPORT.md  MCP_SUCCESS_PATTERNS.md  MEMORY_WORKFLOW_GUIDE.md  NVDA_Investment_Analysis_Report.md  PHASE_2_SUCCESS_SUMMARY.md  PHASE_2_WSL_SETUP.md  PROJECT_CONSOLIDATION_PLAN.md  PROJECT_INSTRUCTIONS.md  (+61 more)
.claude/: settings.local.json
ClaudeDesktopAgent/: .env.example  README.md  basic_mcp_server.py  claude_desktop_config.json  claude_desktop_config_backup.json  claude_mcp_config.json  client_stdout.json  cmd_mcp_server.py  fixed_mcp_server.py  http_mcp_server.py  mcp_screenshot.py  pyproject.toml  requirements.txt  run.py  run_mcp_server.py  screenshot_server.py  simple_mcp_server.py  simple_mcp_server_8091.py  simple_screenshot.py  start_mcp_server.bat  start_windows_fixed_server.bat  test_client.py  test_screenshot.py  test_screenshot_tool.py  ws_mcp_server.py
ClaudeDesktopAgent/ClaudeDesktopAgent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ClaudeDesktopAgent/app/: main.py
ClaudeDesktopAgent/app/api/: router.py
ClaudeDesktopAgent/app/api/routes/: mcp.py  screenshot.py  tools.py
ClaudeDesktopAgent/app/mcp/: main.py  server.py  tools.py
ClaudeDesktopAgent/app/modules/: screenshot.py
ClaudeDesktopAgent/app/utils/: config.py  logger.py  security.py
ClaudeDesktopAgent/archive/: calculator_mcp_sdk.py  calculator_official_sdk.py  calculator_server.py  fixed_calculator_server.py  improved_calculator_server.py  start_calculator_official.bat  start_calculator_sdk.bat  start_calculator_server.bat  start_fixed_calculator.bat  start_improved_calculator.bat
ClaudeDesktopAgent/tests/: test_screenshot.py
ClaudeDesktopBridge/: .env.example  Dockerfile  README.md  docker-compose.yml  docker_build_run.ps1  docker_build_run.sh  pyproject.toml  requirements.txt  run_ui.py
ClaudeDesktopBridge/ClaudeDesktopBridge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ClaudeDesktopBridge/app/: main.py
ClaudeDesktopBridge/app/api/: router.py
ClaudeDesktopBridge/app/api/routes/: bridge.py  browser.py  computer.py  system.py  tools.py
ClaudeDesktopBridge/app/modules/: bridge.py  browser.py  computer.py  system.py
ClaudeDesktopBridge/app/ui/: streamlit_app.py
ClaudeDesktopBridge/app/utils/: config.py  logger.py  security.py
ClaudeDesktopBridge/examples/: claude_agent_demo.py  screenshot_demo.py
ClaudeDesktopBridge/tests/: test_bridge.py  test_computer.py
archive/server_consolidation_20250602_123202/code-intelligence-stubs/code-analysis-mcp/: README.md  pyproject.toml  server.py
archive/server_consolidation_20250602_123202/code-intelligence-stubs/code-intelligence-core/: __init__.py  core.py  pyproject.toml
archive/server_consolidation_20250602_123202/code-intelligence-stubs/code-quality-mcp/: README.md  pyproject.toml  server.py
archive/server_consolidation_20250602_123202/other/dependency-analysis-mcp/: README.md  pyproject.toml  server.py
archive/server_consolidation_20250602_123202/other/refactoring-mcp/: README.md  pyproject.toml  server.py
archive/server_consolidation_20250602_123202/other/test-intelligence-mcp/: README.md  pyproject.toml  server.py
autonomous-assistant-project/: CLAUDE_DESKTOP_DEBUG_INFO.md  DEBUGGING_CAPABILITIES_ASSESSMENT.md  DEBUGGING_TOOLS_PLAN.md  DISCUSSION_SUMMARY.md  DOCKER_ORCHESTRATION_DAY1_SUMMARY.md  PROJECT_TRACKER.md  SERVER_CHECKLIST_DOCKER_ORCHESTRATION.md  SERVER_CHECKLIST_TEMPLATE.md  SESSION_SUMMARY_COMPLETE.md  (+1 more)
servers/claude-code-integration-mcp/: README.md  README_FIXED.md  claude_desktop_config.json  enhanced_server.py  launch_server.bat  pyproject.toml  pyproject_fixed.toml  server_simple.py  test_debug.py  test_enhanced_server.py  test_fixed_server.py  test_server.py  test_simple.py
servers/claude-code-integration-mcp/src/claude_code_integration/: server.py  server_backup.py  server_fixed.py
servers/claude-code-integration-mcp/src/claude_code_integration_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
servers/docker-orchestration-mcp/: README.md  TECHNICAL_NOTES.md  TESTING_LOG.md  claude_desktop_config_snippet.json  launch_fixed.bat  manual_test.py  pyproject.toml  quick_test.bat  quick_test.py  requirements.txt  setup.bat  test.bat  test_startup.py
servers/docker-orchestration-mcp/src/: server.py
servers/docker-orchestration-mcp/tests/: test_docker_orchestration.py
servers/financial-mcp-server/: README.md  mcp_server.py  pyproject.toml  server.py
servers/financial-mcp-server/financial_datasets_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
servers/knowledge-memory-mcp/: pyproject.toml
servers/knowledge-memory-mcp/src/: server.py
servers/knowledge-memory-mcp/src/knowledge/: zettelkasten.py
servers/knowledge-memory-mcp/src/knowledge_memory_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
servers/knowledge-memory-mcp/src/storage/: database.py  database.py.bak
servers/vibetest-use/: .gitignore  MANUAL_INSTALL.md  README.md  TESTING_GUIDE.md  install_dependencies.bat  install_windows.bat  pyproject.toml
servers/vibetest-use/vibetest/: __init__.py  mcp_server.py
(+251 files in other folders)
