[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-datasets-mcp"
version = "0.1.0"
description = "Financial Datasets MCP Server with structured JSON logging"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.22.0",
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]
dev = [
    "black",
    "isort",
]