[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-datasets-mcp"
version = "0.1.0"
description = "Financial Datasets MCP Server with structured JSON logging"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastmcp>=2.5.2", # Standardized MCP framework
    "httpx>=0.27.0",
    "python-json-logger>=2.0.7",
    "anthropic>=0.55.0" # Added Anthropic SDK for consistency
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]
dev = [
    "black",
    "isort",
]

[tool.setuptools]
py-modules = ["server", "mcp_server"]