[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledge-memory-mcp"
version = "1.6.0"
description = "Knowledge Memory MCP Server"
requires-python = ">=3.8"
dependencies = [
    "fastmcp>=0.7.0",
    "python-json-logger>=2.0.0",
    "numpy>=1.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]