[project]
name = "vibetest"
version = "0.1.0"
description = "Browser-agent QA swarm with MCP interface for testing AI-generated websites"
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=2.5.2", # Standardized MCP framework (removed [cli])
  "anthropic>=0.55.0",  # Added Anthropic SDK
  "browser-use",
  "playwright",
  "langchain_google_genai",
  "langchain_core",
  "pydantic",
  "screeninfo",
]

[tool.setuptools.packages.find]
include = ["vibetest*"]

[project.scripts]
vibetest-mcp = "vibetest.mcp_server:run"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
