[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-intelligence-core"
version = "0.1.0"
description = "Shared utilities for code intelligence MCP servers"
authors = [{name = "Claude MCP Tools", email = "claude@anthropic.com"}]
requires-python = ">=3.8"

dependencies = [
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.20.0",
    "tree-sitter-javascript>=0.20.0",
    "tree-sitter-typescript>=0.20.0",
    "astor>=0.8.1",
    "typed-ast>=1.5.0",
    "jedi>=0.18.0",
    "python-json-logger>=2.0.0",
    "aiofiles>=0.8.0",
    "pathspec>=0.10.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0"
]