[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dependency-analysis-mcp"
version = "0.1.0"
description = "MCP server for dependency analysis, security scanning, and license compliance"
authors = [{name = "Claude MCP Tools", email = "claude@anthropic.com"}]
requires-python = ">=3.8"

dependencies = [
    "fastmcp>=0.1.0",
    "python-json-logger>=2.0.0",
    "pip-audit>=2.6.0",
    "safety>=3.0.0",
    "requests>=2.28.0",
    "packaging>=21.0",
    "aiofiles>=0.8.0",
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0"
]

javascript = [
    "nodejs-wheel>=20.0.0"
]

[project.entry-points."console_scripts"]
dependency-analysis-mcp = "server:main"